<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"

    android:orientation="vertical"

    android:background="@color/default_background"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dangky"
        android:gravity="center"
        android:padding="10dp"
        android:layout_margin="19dp"
        android:textStyle="bold"
        android:textSize="38sp"
        android:textColor="@color/white"
        android:singleLine="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/tendangnhap"
        android:textColorHint="@color/gray"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:singleLine="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/nhapmatkhau"
        android:textColorHint="@color/gray"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:password="true"
        android:singleLine="true"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nam"
            android:textColor="@color/white"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nữ"
            android:textColor="@color/white"
            />
    </RadioGroup>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/ngaysinh"
        android:textColorHint="@color/gray"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/baseline_calendar_month_24"
        android:drawablePadding="10dp"
        android:singleLine="true"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/chungminhnhandan"
        android:textColorHint="@color/gray"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/baseline_contact_emergency_24"
        android:drawablePadding="10dp"
        android:singleLine="true"
        android:numeric="integer"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dongy"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/green"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thoat"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/orange"

            />

    </LinearLayout>





</LinearLayout>